Workaround for ubuntu unity bug QTBUG-58723